#69 small bandaid fix to some css layout issues. Will need to be properly looked at later.

--- a/src/components/SateliteDetailPanel.css
+++ b/src/components/SateliteDetailPanel.css
@@ -3,11 +3,6 @@
   background: transparent;
 }
 
-.MainDetailPanel{
-  bottom: 10%;
-  right: 0%;
-}
-
 .DetailDiv{
   padding-bottom: 1em;
 }
